@@ -7,10 +7,14 @@ import com.analizador.reportes.TokenTable;
 import javax.swing.*;
 import javax.swing.event.DocumentEvent;
 import javax.swing.event.DocumentListener;
+import javax.swing.undo.UndoManager;
 import java.awt.*;
+import java.awt.event.WindowAdapter;
+import java.awt.event.WindowEvent;
 import java.io.File;
 import java.io.IOException;
 import java.io.StringReader;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.List;
@@ -41,7 +45,7 @@ public class Editor extends JFrame {
 
     public Editor() {
         setTitle("IDE - Analizador Sintáctico");
-        setSize(800, 600);
+        setSize(1000, 900);
         setLocationRelativeTo(null);
         //setDefaultCloseOperation(EXIT_ON_CLOSE);
         addWindowListener(new WindowAdapter() {
@@ -59,6 +63,7 @@ public class Editor extends JFrame {
                     else if (option == JOptionPane.CANCEL_OPTION) return;
                 }
                 dispose();
+                System.exit(0);
             }
         });
 
@@ -76,6 +81,8 @@ public class Editor extends JFrame {
         createMenuBar();
         setupTextAreaListener();
         analyzeButton.addActionListener(e -> onAnalyze());
+        setupClipboardActions();
+        setupUndoRedo();
     }
 
     private void createMenuBar() {
@@ -136,6 +143,11 @@ public class Editor extends JFrame {
         setJMenuBar(menuBar);
     }
 
+    private void setupClipboardActions() {
+        copyItem.addActionListener(e -> textArea.copy());
+        pasteItem.addActionListener(e -> textArea.paste());
+    }
+
     private void openFile() {
         // Verificar cambios no guardados antes de abrir un nuevo archivo
         if (hasUnsavedChanges) {
@@ -163,7 +175,7 @@ public class Editor extends JFrame {
                 File selectedFile = fileChooser.getSelectedFile();
 
                 // Leer contenido del archivo
-                String content = Files.readString(selectedFile.toPath());
+                String content = Files.readString(selectedFile.toPath(), StandardCharsets.UTF_8);
 
                 // Actualizar interfaz y estado
                 textArea.setText(content);
@@ -205,10 +217,9 @@ public class Editor extends JFrame {
             saveAsFile();
         } else {
             try {
-                Files.write(currentFile.toPath(), textArea.getText().getBytes());
+                Files.writeString(currentFile.toPath(), textArea.getText(), StandardCharsets.UTF_8);
                 hasUnsavedChanges = false;
                 JOptionPane.showMessageDialog(this, "Archivo guardado exitosamente");
-
             } catch (IOException ex) {
                 JOptionPane.showMessageDialog(this, "Error al guardar: " + ex.getMessage());
             }
@@ -243,63 +254,62 @@ public class Editor extends JFrame {
         hasUnsavedChanges = false;
     }
 
-        copyItem.addActionListener(e ->textArea.copy());
-    pasteItem.addActionListener(e ->textArea.paste());
-}
 
-private void setupUndoRedo() {
-    UndoManager undoManager = new UndoManager();
-    textArea.getDocument().addUndoableEditListener(e -> undoManager.addEdit(e.getEdit()));
+    private void setupUndoRedo() {
+        UndoManager undoManager = new UndoManager();
+        textArea.getDocument().addUndoableEditListener(e -> undoManager.addEdit(e.getEdit()));
 
-    undoItem.addActionListener(e -> {
-        if (undoManager.canUndo()) undoManager.undo();
-    });
+        undoItem.addActionListener(e -> {
+            if (undoManager.canUndo()) undoManager.undo();
+        });
 
-    redoItem.addActionListener(e -> {
-        if (undoManager.canRedo()) undoManager.redo();
-    });
-}
-
-private void showAboutDialog() {
-    String info = "Desarrollado por:\n"
-            + "Pablo Daniel Alvarado Rodríguez\n"
-            + "Carné: 202130534\n"
-            + "Curso: Lenguajes Formales y de Programación";
-
-    JOptionPane.showMessageDialog(
-            this,
-            info,
-            "Acerca de",
-            JOptionPane.INFORMATION_MESSAGE
-    );
-}
-
-private void onAnalyze() {
-    String input = textArea.getText();
-    if (input.isEmpty()) {
-        JOptionPane.showMessageDialog(this, "El área de texto está vacía.", "Error", JOptionPane.ERROR_MESSAGE);
-        return;
+        redoItem.addActionListener(e -> {
+            if (undoManager.canRedo()) undoManager.redo();
+        });
     }
 
-    try {
-        Lexer lexer = new Lexer(new StringReader(input));
-        List<Lexer.Token> tokens = new ArrayList<>();
-        Lexer.Token token;
+    private void showAboutDialog() {
+        String info = "Desarrollado por:\n"
+                + "Pablo Daniel Alvarado Rodríguez\n"
+                + "Carné: 202130534\n"
+                + "Curso: Lenguajes Formales y de Programación";
 
-        while ((token = lexer.yylex()) != null) {
-            tokens.add(token);
+        JOptionPane.showMessageDialog(
+                this,
+                info,
+                "Acerca de",
+                JOptionPane.INFORMATION_MESSAGE
+        );
+    }
+
+    private void onAnalyze() {
+        String input = textArea.getText();
+        if (input.isEmpty()) {
+            JOptionPane.showMessageDialog(this, "El área de texto está vacía.", "Error", JOptionPane.ERROR_MESSAGE);
+            return;
         }
-        Lexer lexerAnalyze = new Lexer(new StringReader(input));
-        Parser parser = new Parser(lexerAnalyze, PATH);
-        parser.analizar();
 
-        JOptionPane.showMessageDialog(this, "Análisis exitoso.", "Éxito", JOptionPane.INFORMATION_MESSAGE);
+        try {
+            Lexer lexer = new Lexer(new StringReader(input));
+            List<Lexer.Token> tokens = new ArrayList<>();
+            Lexer.Token token;
 
-        TokenTable tokenTable = new TokenTable(tokens);
-        tokenTable.setVisible(true);
+            while ((token = lexer.yylex()) != null) {
+                tokens.add(token);
+            }
+            Lexer lexerAnalyze = new Lexer(new StringReader(input));
+            Parser parser = new Parser(lexerAnalyze, PATH);
+            parser.analizar();
 
-    } catch (Exception e) {
-        JOptionPane.showMessageDialog(this, "Error durante el análisis: " + e.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
+            JOptionPane.showMessageDialog(this, "Análisis exitoso.", "Éxito", JOptionPane.INFORMATION_MESSAGE);
+
+            TokenTable tokenTable = new TokenTable(tokens);
+            tokenTable.setVisible(true);
+
+        } catch (Exception e) {
+            JOptionPane.showMessageDialog(this, "Error durante el análisis: " + e.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
+        }
     }
+
 }
-}
+
